# xl3-py

./: .gitignore  PORTING_NOTES.md  README.md  conformance-report.json  pyproject.toml
src/xl3/: __init__.py  directives.py  errors.py  evaluator.py  expression.py  filename.py  functions.py  grouper.py  inputs.py  parser.py  pipeline.py  reader.py  renderer.py  types.py  value_model.py
src/xl3/runner/: __init__.py  __main__.py  compare.py  discover.py  dynamic.py
tests/unit/: test_value_model.py
